# bode

./: .gitignore  CMakeLists.txt  README.md  bandfs.mk
bandfs/: Makefile  README.md  banded_example.f90  bandf.f  bandf.fpp  bandfs.fi  bandfs_demo.f90  bandfs_fem_1d.f90  bandfs_fem_1d_quadratic.f90  bandfs_reaction_diffusion.f90  bands.f  bands.fpp  bndmv.f90  bndsl.f90
bandfs/scripts/: plot_reaction_diffusion.gp
bandfs/templates/: bandf.fpp  bands.fpp  bndmv.fpp  bndsl.fpp
examples/: plot_robertson.gp  solve_vdp.py
src/: band.f  bandf.f  bandfs.fi  bands.f  bode.f  bode_module.F90  bode_module.f90  bode_nonlin.f  bode_nonlin.f90  bode_solve.f  bode_solve.f90  ltri.f90  solve.f  test.F90  test_banded1.f90  test_van_der_pol.f90
test/: test_banded1.f90  test_banded2.f90
